@@ -1,0 +1,6 @@
+DAT
+		org	0
+		rdfast	#0, temp
+		rdfast	#0, #$80
+
+temp		long	$100
