@@ -2,7 +2,8 @@ Version 3.6.3
 - Fixed another optimizer bug (forward propagation of constants was
   crossing call boundaries, which caused problems with things changed
   by the call)
- 
+- Fixed immediates on destinations in P2 (like rdfast #0, foo)
+
 Version 3.6.2
 - fastspin can now compile to binary for P2
 - Fixed an optimizer bug where it tried to change INA from a src in
